# esp32_4.4

./: sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ADC/: BAT_Driver.c  BAT_Driver.h
components/BSP/BLE/: ble.c  ble.h  ble_server.h  my_client.c  my_server.c
components/BSP/ESPTIM/: esptim.c  esptim.h
components/BSP/GPTIM/: gptim.c  gptim.h
components/BSP/IIC/: iic.c  iic.h
components/BSP/KEY/: key.c  key.h
components/BSP/LED/: led.c  led.h
components/BSP/MQTT/: mqtt.c  mqtt.h
components/BSP/PWM/: pwm.c  pwm.h
components/BSP/PWR_KEY/: PWR_Key.c  PWR_Key.h
components/BSP/QMI8658/: QMI8658.c  QMI8658.h
components/BSP/RTC/: PCF85063.c  PCF85063.h  rtc.c  rtc.h
components/BSP/SD/: SD_MMC.c  SD_MMC.h
components/BSP/UART/: usart.c  usart.h
components/BSP/WDT/: wdt.c  wdt.h
components/BSP/WEATHER/: bilibili.c  bilibili.h  weather.c  weather.h
components/BSP/WIFI/: simple_wifi_sta.c  wifi_ap.c  wifi_ap.h  wifi_smartconfig.c  wifi_smartconfig.h
components/lv_fs_if/: CMakeLists.txt  lv_fs_fatfs.c  lv_fs_if.h
components/lv_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c
components/lvgl/: lv_conf.h  lv_conf_template.h
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/core/: lv_obj.c
components/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_touch/: Kconfig  cst328.c  cst328.h  touch_driver.c  touch_driver.h
main/: CMakeLists.txt  bmp_BeiJing_BaiTian.c  img_cool.c  img_dry.c  img_warm.c  main.c  my_gui.c  my_gui.h  my_weather.c
temp/: events_init.c  setup_scr_screen_2.c  setup_scr_screen_3.c
